--- a/Source/MetrologyTaxonomy/MT_Editor/Views/AddEditView.xaml
+++ b/Source/MetrologyTaxonomy/MT_Editor/Views/AddEditView.xaml
@@ -61,7 +61,7 @@
                     <TextBlock Style="{StaticResource MaterialDesignHeadline5TextBlock}">Details</TextBlock>
                     <StackPanel Grid.Row="1" Margin="0,24,0,0">
                         <StackPanel Orientation="Horizontal">
-                            <TextBlock Style="{StaticResource MaterialDesignHeadline6TextBlock}" Text="TestProcess." />
+                            <TextBlock Style="{StaticResource MaterialDesignHeadline6TextBlock}" Text="Taxon: " />
                             <TextBlock Style="{StaticResource MaterialDesignHeadline6TextBlock}" Text="{Binding TypeStr, Mode=TwoWay}" />
                             <TextBlock Style="{StaticResource MaterialDesignHeadline6TextBlock}" Text="{Binding QuantityStr, Mode=TwoWay}" />
                             <TextBlock Style="{StaticResource MaterialDesignHeadline6TextBlock}" Text="{Binding Process, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
@@ -98,7 +98,7 @@
                         <RowDefinition Height="Auto" />
                         <RowDefinition Height="500"/>
                     </Grid.RowDefinitions>
-                    <TextBlock Style="{DynamicResource MaterialDesignHeadline5TextBlock}" Grid.Row="0">Parameteres</TextBlock>
+                    <TextBlock Style="{DynamicResource MaterialDesignHeadline5TextBlock}" Grid.Row="0">Parameters</TextBlock>
                     <ScrollViewer Grid.Row="1" VerticalScrollBarVisibility="Auto">
                         <StackPanel  Margin="0,24,0,0" ScrollViewer.CanContentScroll="True">
                             <ListView x:Name="ParamList" ItemsSource="{Binding Parameters, Mode=TwoWay}" Width="480" HorizontalAlignment="Left">
@@ -285,7 +285,7 @@
                     <TextBlock Margin="0,24,0,0">URL</TextBlock>
                     <TextBox Text="{Binding Url, UpdateSourceTrigger=PropertyChanged, Mode=TwoWay}" Width="480" HorizontalAlignment="Left"/>
                     <TextBlock Margin="0,24,0,0">Category Tags</TextBlock>
-                    <TextBlock FontSize="12" Foreground="Gray" FontStyle="Italic">If name/value paris are not needed, enter only the value</TextBlock>
+                    <TextBlock FontSize="12" Foreground="Gray" FontStyle="Italic">If name/value pairs are not needed, enter only the value</TextBlock>
                     <ListView x:Name="CatTagList" ItemsSource="{Binding CategoryTags}" Margin="0,24,0,0" Width="480" HorizontalAlignment="Left">
                         <ListView.ItemTemplate>
                             <DataTemplate>
