--- a/Source/MetrologyTaxonomy/MT_Editor/Views/DetailsView.xaml
+++ b/Source/MetrologyTaxonomy/MT_Editor/Views/DetailsView.xaml
@@ -125,49 +125,7 @@
                     </StackPanel>
                 </StackPanel>
             </materialDesign:Card>
-            <materialDesign:Card UniformCornerRadius="3"  Margin="0 20 0 50" Grid.Row="5" Padding="12 5 12 5"
-                             Visibility="{Binding Taxon.ExternalReference, Converter={StaticResource EmptyListVisibilityConverter}}">
-                <StackPanel Margin="0,10,0,0" >
-                    <StackPanel Orientation="Horizontal">
-                        <TextBlock FontSize="16" >Extenal Reference -&#160;</TextBlock>
-                        <Button Style="{StaticResource HyperlinkButton}" Focusable="False" cal:Message.Attach="[Action Link()]">
-                            <TextBlock>
-                            <Hyperlink Focusable="False">
-                                <TextBlock Text="{Binding Taxon.ExternalReference.Name}"></TextBlock>
-                            </Hyperlink>
-                        </TextBlock>
-                        </Button>
-                    </StackPanel>
-                    <StackPanel Visibility="{Binding Taxon.ExternalReference.CategoryTags, Converter={StaticResource EmptyListVisibilityConverter}}">
-                        <Border Height="1" Background="Silver" Margin="0,10,0,5"/>
-                        <TextBlock FontSize="16" Text="Category Tags" />
-                        <ItemsControl ItemsSource="{Binding Taxon.ExternalReference.CategoryTags}" Margin="0,5,0,0">
-                            <ItemsControl.ItemTemplate>
-                                <DataTemplate>
-                                    <StackPanel>
-                                        <Grid Visibility="{Binding Name, Converter={StaticResource IsBlankConverter}}">
-                                            <Grid.ColumnDefinitions>
-                                                <ColumnDefinition Width="*" MaxWidth="200" />
-                                                <ColumnDefinition Width="*" />
-                                            </Grid.ColumnDefinitions>
-                                            <Grid.RowDefinitions>
-                                                <RowDefinition Height="Auto" />
-                                            </Grid.RowDefinitions>
-                                            <TextBlock FontWeight="Bold" Grid.Row="0" Grid.Column="0" Text="{Binding Name}"/>
-                                            <TextBlock Grid.Row="0" Grid.Column="1" Text="{Binding Value}" />
-                                        </Grid >
-                                        <StackPanel Visibility="{Binding Name, Converter={StaticResource IsNotBlankConverter}}">
-                                            <TextBlock Grid.Row="0" Grid.Column="1" Text="{Binding Value}" />
-                                        </StackPanel>
-                                    </StackPanel>
-                                </DataTemplate>
-                            </ItemsControl.ItemTemplate>
-                        </ItemsControl>
-                    </StackPanel>
-                </StackPanel>
-            </materialDesign:Card>
-            <materialDesign:Card UniformCornerRadius="3"  Margin="0 20 0 50" Grid.Row="5" Padding="12 5 12 5"
-                             Visibility="{Binding Taxon.ExternalReferences, Converter={StaticResource NullableToVisibilityConverter}}">
+            <materialDesign:Card UniformCornerRadius="3"  Margin="0 20 0 50" Grid.Row="5" Padding="12 5 12 5">
                 <StackPanel Margin="0,10,0,0" >
                     <StackPanel Margin="0,10,0,5">
                         <TextBlock FontSize="16" FontWeight="Bold" >External References</TextBlock>
