Style, Spelling and Ext Refs bug
Updated code style to make it more readable by devs.
Fixed bug where if a single ref existed and user didn't select it then the showMore button didn't do anything.
Fixed a couple more spelling errors.

--- a/Source/MetrologyTaxonomy/MT_Editor/Views/HomeView.xaml
+++ b/Source/MetrologyTaxonomy/MT_Editor/Views/HomeView.xaml
@@ -19,7 +19,7 @@
             <TextBlock Style="{DynamicResource MaterialDesignHeadline5TextBlock}" Text="Metrology Taxonomy" Margin="0,0,0,24" />
 
             <TextBlock Margin="0,0,0,15" FontSize="15" TextWrapping="Wrap">
-                Welcome to the MII's Group Metrology Taxonomy Editor.
+                Welcome to the MII Group's Metrology Taxonomy Editor.
             </TextBlock>
 
             <TextBlock FontSize="15" TextWrapping="Wrap" Margin="0,0,0,15">
